Fixed Scrollbar issue

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ a:active {
 html,
 body {
   margin: 0px;
-  height: 100%;
+  /* height: 100%; */
   background-color: var(--background);
   display: flex;
   flex-direction: column;
@@ -231,7 +231,7 @@ body {
   align-items: center;
   gap: 7rem;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   z-index: 15;
   overflow-y: auto;
 }
